# ntucool

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude-plugin/: marketplace.json  plugin.json
codegen/: api-spec.json  gen.py  gen_ir.py  validate.py
codegen/languages/: rust.py
codegen/overrides/: file_upload.json  pagination.json  type_fixes.json
codegen/schemas/: access_tokens.json  account_calendars.json  account_domain_lookups.json  account_notifications.json  account_reports.json  accounts.json  accounts_(lti).json  admins.json  analytics.json  announcement_external_feeds.json  announcements.json  api_token_scopes.json  appointment_groups.json  assignment_extensions.json  assignment_groups.json  assignments.json  authentication_providers.json  authentications_log.json  blackout_dates.json  blueprint_courses.json  bookmarks.json  brand_configs.json  calendar_events.json  collaborations.json  comm_messages.json  communication_channels.json  conferences.json  content_exports.json  content_migrations.json  content_security_policy_settings.json  content_shares.json  conversations.json  course_audit_log.json  course_pace.json  course_quiz_extensions.json  courses.json  custom_gradebook_columns.json  discussion_topics.json  e_portfolios.json  e_pub_exports.json  (+82 more)
codegen/templates/rust/: endpoints.rs.jinja2  models.rs.jinja2  params.rs.jinja2
cool-api/: Cargo.toml
cool-api/src/: auth.rs  client.rs  config.rs  credentials.rs  download.rs  error.rs  lib.rs  paths.rs  session.rs  upload.rs
cool-api/tests/: smoke.rs
cool-cli/: Cargo.toml
cool-cli/src/: main.rs  output.rs
cool-cli/src/commands/: announcement.rs  assignment.rs  course.rs  discussion.rs  file.rs  grade.rs  login.rs  logout.rs  mod.rs  module.rs  submission.rs  user.rs  whoami.rs
cool-cli/src/tui/: browser.rs  fuzzy_select.rs  mod.rs
cool-mcp/: Cargo.toml
cool-mcp/src/: file_server.rs  main.rs
cool-mcp/tests/: call.sh  smoke.sh
cool-tools/: Cargo.toml
cool-tools/src/: announcements.rs  assignments.rs  attachments.rs  courses.rs  discussions.rs  files.rs  grades.rs  lib.rs  modules.rs  pages.rs  pdf.rs  profile.rs  submissions.rs  text.rs  types.rs  users.rs
cool-tui/: Cargo.toml
cool-tui/src/: app.rs  event.rs  main.rs  theme.rs
cool-tui/src/data/: mod.rs
cool-tui/src/ui/: components.rs  course.rs  dashboard.rs  help.rs  login.rs  mod.rs  search.rs
docs/: TOOLS.md
mcp-minimal/: Cargo.toml
mcp-minimal/src/: main.rs
plugins/ntucool/.claude-plugin/: plugin.json
plugins/ntucool/commands/: setup.md
plugins/ntucool/skills/ntucool/: SKILL.md
scripts/: claude-with-plugin.sh  plugin-dev.sh
skills/ntucool/: SKILL.md
