[package]
name = "cool-api"
version = "0.1.0"
edition = "2021"
description = "NTU COOL Canvas API client for Rust"

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json", "multipart", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
scraper = "0.21"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2"
urlencoding = "2"
