[package]
name = "ntucool-api"
description = "NTU COOL (cool.ntu.edu.tw) Canvas-LMS HTTP client. NTU-only — login goes through NTU's ADFS SAML flow."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["ntu", "canvas", "lms", "cool"]
categories = ["api-bindings"]

[lib]
name = "cool_api"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "multipart", "stream", "rustls-tls", "charset", "http2"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
scraper = "0.21"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2"
urlencoding = "2"
