[package]
name = "cool-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for NTU COOL"

[[bin]]
name = "cool"
path = "src/main.rs"

[dependencies]
cool-api = { path = "../cool-api" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
dialoguer = "0.11"
rpassword = "7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["multipart", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
scraper = "0.21"
ego-tree = "0.9"
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.29", features = ["crossterm"] }
