[package]
name = "cool-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing NTU COOL tools to AI assistants"

[[bin]]
name = "cool-mcp"
path = "src/main.rs"

[dependencies]
cool-api = { path = "../cool-api" }
cool-tools = { path = "../cool-tools" }
rmcp = { version = "0.8", features = [
    "server",
    "macros",
    "transport-io",
] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
