[package]
name = "ntucool-mcp"
description = "MCP (Model Context Protocol) server exposing NTU COOL tools to AI assistants. NTU-only. Installs the `ntucool-mcp` binary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["ntu", "canvas", "lms", "mcp", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "ntucool-mcp"
path = "src/main.rs"

[dependencies]
cool-api = { path = "../cool-api", version = "0.0.1", package = "ntucool-api" }
cool-tools = { path = "../cool-tools", version = "0.0.1", package = "ntucool-tools" }
rmcp = { version = "0.8", features = [
    "server",
    "macros",
    "transport-io",
] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
