[package]
name = "ntucool-tools"
description = "Reusable NTU COOL tool surface (contract shapes used by both CLI and MCP frontends)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["ntu", "canvas", "lms", "mcp"]
categories = ["api-bindings"]

[lib]
name = "cool_tools"
path = "src/lib.rs"

[dependencies]
cool-api = { path = "../cool-api", version = "0.0.1", package = "ntucool-api" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.21"
ego-tree = "0.9"
schemars = "1"
pdf-extract = "0.10"
htmd = "0.5"
