[package]
name = "cool-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "cool-tui"
path = "src/main.rs"

[dependencies]
cool-api = { path = "../cool-api", version = "0.1.0", package = "ntucool-api" }

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
anyhow = "1"
unicode-width = "0.2"
textwrap = "0.16"
open = "5"
dirs = "6"
fuzzy-matcher = "0.3"
html-escape = "0.2"
regex = "1"
rpassword = "7"
reqwest = { version = "0.12", features = ["json"] }
