[package]
name = "mcp-minimal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "mcp-minimal"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
